Added Question state to Question.Description
